--- a/src/app/components/users-events/list-users/list-users.component.html
+++ b/src/app/components/users-events/list-users/list-users.component.html
@@ -1,7 +1,18 @@
-<div *ngIf="!!users" class="list-users-content">
+<div
+  *ngIf="!!users"
+  class="list-users-content"
+>
   <section class="column">
-    <div *ngFor="let user of users.value" class="user-list-content" (click)="userSelected(user)">
-      <img class="user-avatar" src="{{user.avatar_url}}" alt="user.login">
+    <div
+      *ngFor="let user of users"
+      class="user-list-content"
+      (click)="userSelected(user)"
+    >
+      <img
+        class="user-avatar"
+        src="{{user.avatar_url}}"
+        alt="user.login"
+      >
       <p>{{user.login}}</p>
     </div>
   </section>
